# Customer-Support-Env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--Siyonova-workspaces-Customer-Support-Env-whatsapp-comm_1775654027126.txt  Pasted--Siyonova-workspaces-Customer-Support-Env-whatsapp-comm_1775662221341.txt
server/: __init__.py  app.py
whatsapp-commerce-env/: .env.example  .gitignore  Dockerfile  README.md  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.sh  validate.py
whatsapp-commerce-env/server/: app.py
